Require email verification to complete signup (#12)
Co-authored-by: Blake Dunaway <badunaway@alumni.iu.edu>